kylin-printer (1.0.7kord~rc6) v101; urgency=medium

  * 修复bug#37728：【麒麟打印】连接奔图打印机，右上角麒麟打印服务闪退，终端报段错误
  * 打开日志，放置于路径/tmp/kylin-printer/log/下的日志文件中
  * 修复bug#37811：【麒麟打印】手动安装打印机驱动界面本地添加或拖拽其余架构的deb包，授权后没有相关提示

 -- hanzehui <hanzehui@kylinos.cn>  Fri, 5 Feb 2021 13:40:00 +0800

kylin-printer (1.0.7kord~rc5) v101; urgency=medium

  * 修复bug#18067：控制面板-系统-开机启动，有程序名需要中文化

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Feb 2021 11:30:00 +0800

kylin-printer (1.0.7kord~rc4) v101; urgency=medium

  * 修复bug#33691：添加本地驱动文件选择弹窗UI问题

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 3 Feb 2021 16:52:00 +0800

kylin-printer (1.0.7kord~rc3) v101; urgency=medium

  * 修复bug#36525：手动安装界面更改打印机位置，安装成功后查看设备，位置仍显示Office
  * 修复bug#33568：安装成功弹窗界面显示异常
  * 修复bug#33555：安装失败界面显示异常
  * 修复bug#33389：已安装过的打印机拔插之后仍继续安装
  * 修复bug#33366：打印机驱动安装成功弹窗打印机名称显示不全，且“安装成功”四字没有显示
  * 修复bug#33349：打印机气泡点击按钮后不消失
  * 修复bug#37728：【麒麟打印】连接奔图打印机，右上角麒麟打印服务闪退，终端报段错误

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 16:40:00 +0800

kylin-printer (1.0.7kord~rc2) v101; urgency=medium

  * 修改冷启动流程

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 20:16:00 +0800

kylin-printer (1.0.7kord~rc1) v101; urgency=medium

  * 修改冷启动流程

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 19:31:00 +0800

kylin-printer (1.0.6) v101; urgency=medium

  * 修复bug#35968：手动安装界面关闭“打印机名称不可为空”的提示后，手动安装界面退出
  * 修复bug#33650：手动安装界面拖拽deb包始终显示加载中
  * 修复bug#36306：测试机接入奔图P2505，系统桌面右上角提示打印机信息发生截断
  * 修复bug#36072：手动安装打印机驱动界面相关网址显示错误
  * 修复bug#35976：添加本地驱动或拖拽deb包到手动安装驱动界面，界面一直在转圈，无法跳转授权界面
  * 修复bug#35968：手动安装界面关闭“打印机名称不可为空”的提示后，手动安装界面退出
  * 修复bug#35964：夜间模式下，麒麟打印服务界面部分未反白，无法看清
  * 修复bug#35870：接入usb打印机，桌面右上角弹框中部分信息显示不全
  * 修复bug#34013：麒麟打印程序启动时对打印机做以判断
  * 修复bug#33650：手动安装界面拖拽deb包始终显示加载中
  * 修复bug#33389：已安装过的打印机拔插之后仍继续安装
  * 增加libqapt3-runtime依赖

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 26 Jan 2021 14:30:00 +0800

kylin-printer (1.0.5) v101; urgency=medium

  * 修复bug#33931：打印完成之后仍然显示打印机正在启动
  * 修复bug#33733：手动安装驱动界面官网希望可以点击