@@ -1,3 +1,9 @@
+kylin-printer (1.0.7kord~rc7) v101; urgency=medium
+
+  * 增加入参判断，完善异常流程
+
+ -- hanzehui <hanzehui@kylinos.cn>  Fri, 5 Feb 2021 15:40:00 +0800
+
 kylin-printer (1.0.7kord~rc6) v101; urgency=medium
 
   * 修复bug#37728：【麒麟打印】连接奔图打印机，右上角麒麟打印服务闪退，终端报段错误
@@ -26,7 +32,6 @@ kylin-printer (1.0.7kord~rc3) v101; urgency=medium
   * 修复bug#33389：已安装过的打印机拔插之后仍继续安装
   * 修复bug#33366：打印机驱动安装成功弹窗打印机名称显示不全，且“安装成功”四字没有显示
   * 修复bug#33349：打印机气泡点击按钮后不消失
-  * 修复bug#37728：【麒麟打印】连接奔图打印机，右上角麒麟打印服务闪退，终端报段错误
 
  -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 16:40:00 +0800
 
